--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/custom_root">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,6 +50,7 @@
                         android:layout_marginTop="20dp"
                         android:text="Name"
                         android:textSize="25dp"
+                        android:textColor="@color/black"
                         android:textStyle="bold" />
 
 
@@ -58,6 +61,7 @@
                         android:layout_marginBottom="20dp"
                         android:text="Location, Location"
                         android:textSize="16dp"
+                        android:textColor="@color/black"
                         android:textStyle="bold" />
                 </LinearLayout>
                 <LinearLayout
@@ -69,10 +73,10 @@
                         android:id="@+id/imageButton2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
                         android:backgroundTint="@color/white"
                         android:src="@drawable/heart"
-                        android:layout_marginTop="20dp"
-                        >
+                        tools:ignore="SpeakableTextPresentCheck">
 
                     </ImageButton>
                 </LinearLayout>
