--- a/app/src/main/res/layout/activity_eight.xml
+++ b/app/src/main/res/layout/activity_eight.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -116,7 +117,7 @@
         <EditText
             android:id="@+id/reason"
             android:layout_width="match_parent"
-            android:layout_height="245dp"
+            android:layout_height="230dp"
             android:drawablePadding="12dp"
             android:ems="10"
             android:inputType="textPersonName"
