--- a/app/src/main/res/layout/activity_fifth.xml
+++ b/app/src/main/res/layout/activity_fifth.xml
@@ -37,6 +37,7 @@
                 android:paddingTop="40dp"
                 android:text="Thank you for joining the app!"
                 android:textSize="25dp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <TextView
@@ -47,6 +48,7 @@
                 android:paddingTop="10dp"
                 android:text="We hope to find your buddy!"
                 android:textSize="20dp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <ImageButton
